add DateStringDeserializer for dateString to java.util.Date & add base enum & add customer validator

--- a/codrim-common-utils/pom.xml
+++ b/codrim-common-utils/pom.xml
@@ -88,6 +88,12 @@
       <artifactId>jackson-databind</artifactId>
     </dependency>
     <!-- /fasterxml -->
+    <!-- hibernate validator -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+    <!-- /hibernate validator -->
 
     <dependency>
       <groupId>org.slf4j</groupId>
