--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,14 @@
       </dependency>
       <!-- /fasterxml -->
 
+      <!-- hibernate validator -->
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>5.3.2.Final</version>
+      </dependency>
+      <!-- /hibernate validator -->
+
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
