--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
         <artifactId>commons-fileupload</artifactId>
         <version>1.3.1</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
+      <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>1.9.3</version>
+      </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
