--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.codrim.common</groupId>
   <artifactId>codrim-common</artifactId>
-  <version>1.0.10-SNAPSHOT</version>
+  <version>1.0.11-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
     <module>codrim-common-utils</module>
@@ -15,6 +15,7 @@
     <junit.version>4.12</junit.version>
     <slf4j.version>1.7.21</slf4j.version>
     <logback.version>1.1.7</logback.version>
+    <java.version>1.8</java.version>
   </properties>
 
   <dependencyManagement>
