--- a/common-rpc/pom.xml
+++ b/common-rpc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>codrim-common</artifactId>
         <groupId>com.codrim.common</groupId>
-        <version>1.0.15-SNAPSHOT</version>
+        <version>1.0.16-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common-rpc</artifactId>
@@ -18,4 +18,13 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
