--- a/codrim-common-utils/pom.xml
+++ b/codrim-common-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.codrim.common</groupId>
         <artifactId>codrim-common</artifactId>
-        <version>1.0.17-SNAPSHOT</version>
+        <version>1.0.18-SNAPSHOT</version>
     </parent>
     <artifactId>codrim-common-utils</artifactId>
     <name>codrim-common-utils</name>
@@ -21,7 +21,7 @@
         </dependency>
 
         <!-- apache -->
-        <dependency><!-- httpclient -->
+        <dependency><!-- http client -->
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
-        </dependency><!-- /httpclient -->
+        </dependency><!-- /http client -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -61,8 +61,8 @@
         </dependency>
         <!-- /apache -->
         <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
         </dependency>
         <!-- servlet -->
         <dependency>
@@ -98,14 +98,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
         </dependency>
     </dependencies>
 
