--- a/codrim-common-utils/pom.xml
+++ b/codrim-common-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.codrim.common</groupId>
         <artifactId>codrim-common</artifactId>
-        <version>1.0.18-SNAPSHOT</version>
+        <version>1.0.19</version>
     </parent>
     <artifactId>codrim-common-utils</artifactId>
     <name>codrim-common-utils</name>
@@ -17,8 +17,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
         </dependency>
+
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+        <!-- /spring -->
 
         <!-- apache -->
         <dependency><!-- http client -->
