--- a/common-rpc/pom.xml
+++ b/common-rpc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>codrim-common</artifactId>
         <groupId>com.codrim.common</groupId>
-        <version>1.0.18-SNAPSHOT</version>
+        <version>1.0.19</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common-rpc</artifactId>
