--- a/codrim-common-utils/pom.xml
+++ b/codrim-common-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.codrim.common</groupId>
         <artifactId>codrim-common</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>codrim-common-utils</artifactId>
     <name>codrim-common-utils</name>
@@ -80,10 +80,6 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-        </dependency>
         <!-- fasterxml -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -94,12 +90,6 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <!-- /fasterxml -->
-        <!-- hibernate validator -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-        </dependency>
-        <!-- /hibernate validator -->
 
         <dependency>
             <groupId>org.slf4j</groupId>
