--- a/common-rpc/pom.xml
+++ b/common-rpc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>codrim-common</artifactId>
         <groupId>com.codrim.common</groupId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>common-rpc</artifactId>
@@ -16,6 +16,18 @@
             <groupId>com.codrim.common</groupId>
             <artifactId>codrim-common-utils</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
         </dependency>
     </dependencies>
 
