--- a/codrim-common-utils/pom.xml
+++ b/codrim-common-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.codrim.common</groupId>
         <artifactId>codrim-common</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1</version>
     </parent>
     <artifactId>codrim-common-utils</artifactId>
     <name>codrim-common-utils</name>
@@ -75,6 +75,12 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+
         <!-- EXCEL导出依赖jar -->
         <dependency>
             <groupId>org.apache.poi</groupId>
